<resources>
    <string name="app_name">LogisticHM</string>
    <string name="logistics">Грузоперевозки</string>
    <string name="auth">Авторизация</string>
    <string name="text_bottom">Войдите в свою учетную запись</string>
    <string name="btnSignIn">Войти</string>
    <string name="btnRegister">Регистрация</string>
    <string name="title_activity_history_order_window">История заказов</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="where_from">Откуда?</string>
    <string name="where">Куда?</string>
    <string name="create_order_menu">Создать заявку</string>
    <string name="list_order_menu">Список заявок</string>
    <string name="communication_organization_menu">Связь с организацией</string>
    <string name="call_menu">Позвонить</string>
    <string name="message_menu">Написать</string>
    <string name="time_filing">Время подачи</string>
    <string name="how_many_hours">На сколько часов?</string>
    <string name="textview_number_movers">Укажите количество грузчиков:</string>
    <string name="comment_order">Комментарий</string>
    <string name="comment_hint">Хрупкие вещи, холодильник...</string>
    <string name="button_to_choose_pay">Отправить заявку</string>
    <string name="nav_user_profile">Профиль пользователя</string>
    <string name="radio_cash">Наличные</string>
    <string name="radio_card">Карта</string>
    <string name="tv_choose_pay">Способ оплаты</string>
    <string name="btnChooseDate">Выбрать дату</string>
    <string name="btnChooseTime">Выбрать время</string>
    <string name="rowTVWhereFrom">Откуда?</string>
    <string name="rowTVWhere">Куда?</string>
    <string name="rowTVComment">Комментарий к заказу</string>
    <string name="rowTVNumberMovers">Количество грузчиков</string>

    <string-array name="spinner_number_movers">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
