<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_create_order"
            android:icon="@drawable/ic_create_order"
            android:title="@string/create_order_menu"/>
        <item
            android:id="@+id/nav_list_order"
            android:icon="@drawable/ic_list_order"
            android:title="@string/list_order_menu"/>

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/nav_user_profile"/>
    </group>
    <item android:title="@string/communication_organization_menu">
        <menu>
            <item
                android:id="@+id/nav_call_administrator"
                android:icon="@drawable/ic_call_administrator"
                android:title="@string/call_menu"/>
            <item
                android:id="@+id/nav_message_administrator"
                android:icon="@drawable/ic_message_administrator"
                android:title="@string/message_menu"/>
        </menu>
    </item>
</menu>