<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="3dp"
    app:cardElevation="3dp"
    app:contentPadding="5dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_margin="15dp">

        <TextView
            android:id="@+id/rowDateTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="DateTime"
            android:textColor="#000"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginEnd="6dp"
            android:layout_weight="1">
        </TextView>

        <TextView
            android:id="@+id/rowPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Price"
            android:textColor="#000"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="6dp"
            android:layout_weight="1">
        </TextView>

    </LinearLayout>

        <TextView
            android:id="@+id/rowWhereFrom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textSize="23sp"
            android:text="@string/rowTVWhereFrom"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_startpoint">
        </TextView>

        <TextView
            android:id="@+id/rowWhere"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textSize="23sp"
            android:text="@string/rowTVWhere"
            android:layout_marginTop="20dp"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_endpoint">
        </TextView>

        <TextView
            android:id="@+id/rowComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textSize="18sp"
            android:text="@string/rowTVComment"
            android:layout_marginTop="20dp"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_comment">
        </TextView>

        <TextView
            android:id="@+id/rowNumberMovers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textSize="18sp"
            android:text="@string/rowTVNumberMovers"
            android:layout_marginTop="20dp"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_movers">
        </TextView>

    </LinearLayout>

</androidx.cardview.widget.CardView>